.helm/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: serg046-app-service
spec:
  selector:
    app: serg046-app-deployment
  ports:
  - name: http
    port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: serg046-app-service-2
spec:
  type: LoadBalancer
  selector:
    app: serg046-app-deployment
  ports:
  - name: first
    port: 30001
    targetPort: 80
    nodePort: 30001
---
apiVersion: v1
kind: Service
metadata:
  name: serg046-app-service-3
spec:
  type: LoadBalancer
  selector:
    app: serg046-app-deployment
  ports:
  - name: first
    port: 30002
    targetPort: 80
    nodePort: 30002
